--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: ^2.0.14
   flutter_screenutil: ^5.9.3
   equatable: ^2.0.5
+  dotted_border: ^2.1.0
+  super_drag_and_drop: ^0.8.24
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svg/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # list giving the asset and other descriptors for the font. For
