--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
+  # The following adds the Cupertino Icons font to yo ur application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   bloc: ^8.1.4
@@ -42,6 +42,8 @@ dependencies:
   equatable: ^2.0.5
   dotted_border: ^2.1.0
   super_drag_and_drop: ^0.8.24
+  flutter_advanced_switch: ^3.1.0
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
