--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,11 @@ dependencies:
   flutter_screenutil: ^5.9.3
   equatable: ^2.0.5
   dotted_border: ^2.1.0
-  super_drag_and_drop: ^0.8.24
+  desktop_drop  : 0.5.0
   flutter_advanced_switch: ^3.1.0
   shared_preferences: ^2.3.3
+  flutter_dotenv: ^5.2.1
+  file_picker: ^8.1.4
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +73,7 @@ flutter:
   assets:
     - assets/svg/
     - assets/images/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # list giving the asset and other descriptors for the font. For
