--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   shared_preferences: ^2.3.3
   flutter_dotenv: ^5.2.1
   file_picker: ^8.1.4
+  flutter_spinkit: ^5.2.1
+  cherry_toast: ^1.11.0
 
 dev_dependencies:
   flutter_test:
