--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 CONVERTAPI_SECRET=eHvCekBAHrupI26M
+WEEKLY_PLAN=7_days_plan
+MONTHLY_PLAN=30_days_plan
+YEARLY_PLAN=365_days_plan
+LIFETIME_PLAN=lifetime_plan
