--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   path_provider: ^2.1.5
   open_file: ^3.5.10
   in_app_purchase: ^3.2.0
+  in_app_purchase_storekit: ^0.3.20+2
 
 dev_dependencies:
   flutter_test:
